# Video-library

./: .gitignore  COMPILE.md  README.md  TODO.md  meson.build
src/: config_parser.c  config_parser.h  db_sqlite.c  db_sqlite.h  linked_list.c  linked_list.h  main.c  menus_ncurses.c  menus_ncurses.h  ncurses_utils.c  ncurses_utils.h
